--- a/languages/_s.pot
+++ b/languages/_s.pot
@@ -2,8 +2,8 @@
 # This file is distributed under the GNU General Public License v2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: cambridge_glass_light 1.0.0\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/tags/cambridge_glass_light\n"
+"Project-Id-Version: jacky 1.0.0\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/tags/jacky\n"
 "POT-Creation-Date: 2016-02-14 21:43:07+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -13,30 +13,30 @@ msgstr ""
 "Language-Team: LANGUAGE <LL@li.org>\n"
 
 #: 404.php:17
-#@ cambridge_glass_light
+#@ jacky
 msgid "Oops! That page can&rsquo;t be found."
 msgstr ""
 
 #: 404.php:21
-#@ cambridge_glass_light
+#@ jacky
 msgid "It looks like nothing was found at this location. Maybe try one of the links below or a search?"
 msgstr ""
 
 #: 404.php:33
-#@ cambridge_glass_light
+#@ jacky
 msgid "Most Used Categories"
 msgstr ""
 
 #. translators: %1$s: smiley
 #: 404.php:51
 #, php-format
-#@ cambridge_glass_light
+#@ jacky
 msgid "Try looking in the monthly archives. %1$s"
 msgstr ""
 
 #: comments.php:31
 #, php-format
-#@ cambridge_glass_light
+#@ jacky
 msgctxt "comments title"
 msgid "One thought on &ldquo;%2$s&rdquo;"
 msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
@@ -45,74 +45,74 @@ msgstr[1] ""
 
 #: comments.php:40
 #: comments.php:61
-#@ cambridge_glass_light
+#@ jacky
 msgid "Comment navigation"
 msgstr ""
 
 #: comments.php:43
 #: comments.php:64
-#@ cambridge_glass_light
+#@ jacky
 msgid "Older Comments"
 msgstr ""
 
 #: comments.php:44
 #: comments.php:65
-#@ cambridge_glass_light
+#@ jacky
 msgid "Newer Comments"
 msgstr ""
 
 #: comments.php:78
-#@ cambridge_glass_light
+#@ jacky
 msgid "Comments are closed."
 msgstr ""
 
 #: footer.php:18
-#@ cambridge_glass_light
+#@ jacky
 msgid "https://wordpress.org/"
 msgstr ""
 
 #: footer.php:18
 #, php-format
-#@ cambridge_glass_light
+#@ jacky
 msgid "Proudly powered by %s"
 msgstr ""
 
 #: footer.php:20
 #, php-format
-#@ cambridge_glass_light
+#@ jacky
 msgid "Theme: %1$s by %2$s."
 msgstr ""
 
 #: functions.php:47
-#@ cambridge_glass_light
+#@ jacky
 msgid "Primary"
 msgstr ""
 
 #: functions.php:102
-#@ cambridge_glass_light
+#@ jacky
 msgid "Sidebar"
 msgstr ""
 
 #: header.php:25
-#@ cambridge_glass_light
+#@ jacky
 msgid "Skip to content"
 msgstr ""
 
 #: header.php:45
-#@ cambridge_glass_light
+#@ jacky
 msgid "Primary Menu"
 msgstr ""
 
 #: inc/template-tags.php:28
 #, php-format
-#@ cambridge_glass_light
+#@ jacky
 msgctxt "post date"
 msgid "Posted on %s"
 msgstr ""
 
 #: inc/template-tags.php:33
 #, php-format
-#@ cambridge_glass_light
+#@ jacky
 msgctxt "post author"
 msgid "by %s"
 msgstr ""
@@ -120,34 +120,34 @@ msgstr ""
 #. translators: used between list items, there is a space after the comma
 #: inc/template-tags.php:50
 #: inc/template-tags.php:56
-#@ cambridge_glass_light
+#@ jacky
 msgid ", "
 msgstr ""
 
 #: inc/template-tags.php:52
 #, php-format
-#@ cambridge_glass_light
+#@ jacky
 msgid "Posted in %1$s"
 msgstr ""
 
 #: inc/template-tags.php:58
 #, php-format
-#@ cambridge_glass_light
+#@ jacky
 msgid "Tagged %1$s"
 msgstr ""
 
 #: inc/template-tags.php:64
-#@ cambridge_glass_light
+#@ jacky
 msgid "Leave a comment"
 msgstr ""
 
 #: inc/template-tags.php:64
-#@ cambridge_glass_light
+#@ jacky
 msgid "1 Comment"
 msgstr ""
 
 #: inc/template-tags.php:64
-#@ cambridge_glass_light
+#@ jacky
 msgid "% Comments"
 msgstr ""
 
@@ -155,70 +155,70 @@ msgstr ""
 #: inc/template-tags.php:71
 #: template-parts/content-page.php:33
 #, php-format
-#@ cambridge_glass_light
+#@ jacky
 msgid "Edit %s"
 msgstr ""
 
 #: search.php:19
 #, php-format
-#@ cambridge_glass_light
+#@ jacky
 msgid "Search Results for: %s"
 msgstr ""
 
 #: template-parts/content-none.php:14
-#@ cambridge_glass_light
+#@ jacky
 msgid "Nothing Found"
 msgstr ""
 
 #: template-parts/content-none.php:21
 #, php-format
-#@ cambridge_glass_light
+#@ jacky
 msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
 msgstr ""
 
 #: template-parts/content-none.php:25
-#@ cambridge_glass_light
+#@ jacky
 msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
 msgstr ""
 
 #: template-parts/content-none.php:31
-#@ cambridge_glass_light
+#@ jacky
 msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
 msgstr ""
 
 #: template-parts/content-page.php:22
 #: template-parts/content.php:38
-#@ cambridge_glass_light
+#@ jacky
 msgid "Pages:"
 msgstr ""
 
 #. translators: %s: Name of current post. 
 #: template-parts/content.php:33
 #, php-format
-#@ cambridge_glass_light
+#@ jacky
 msgid "Continue reading %s <span class=\"meta-nav\">&rarr;</span>"
 msgstr ""
 
 #. Theme Name of the plugin/theme
-msgid "cambridge_glass_light"
+msgid "jacky"
 msgstr ""
 
 #. Theme URI of the plugin/theme
-#@ cambridge_glass_light
+#@ jacky
 msgid "http://arijit.com/"
 msgstr ""
 
 #. Description of the plugin/theme
-#@ cambridge_glass_light
+#@ jacky
 msgid "Simple modern HTML5 responisve theme suitable for photo galleries based on Underscores theme."
 msgstr ""
 
 #. Author of the plugin/theme
-#@ cambridge_glass_light
+#@ jacky
 msgid "Harry"
 msgstr ""
 
 #. Author URI of the plugin/theme
-#@ cambridge_glass_light
+#@ jacky
 msgid "http://arijit.com/"
 msgstr ""
